--- a/OPS.html
+++ b/OPS.html
@@ -41,17 +41,9 @@
         width: 40%;
     }
 
-    /* Ocultar fundo na impressão */
-    @media print {
-        body {
-            background: white;
-        }
-        .card {
-            box-shadow: none;
-        }
-        #btnPDF {
-            display: none;
-        }
+    #qr {
+        text-align: center;
+        margin-top: 20px;
     }
 
     #btnPDF {
@@ -64,6 +56,12 @@
         border-radius: 8px;
         font-size: 16px;
         cursor: pointer;
+    }
+
+    @media print {
+        #btnPDF {
+            display: none;
+        }
     }
 </style>
 </head>
@@ -83,6 +81,12 @@
         <tr><td class="label">Data de Início</td><td id="inicio"></td></tr>
         <tr><td class="label">Data de Término</td><td id="termino"></td></tr>
     </table>
+
+    <!-- QR CODE APARECE NO PDF -->
+    <div id="qr">
+        <h3>QR Code</h3>
+        <img id="qrImg" src="" width="180">
+    </div>
 </div>
 
 <button id="btnPDF" onclick="window.print()">Salvar PDF</button>
@@ -91,15 +95,33 @@
 // Lê os parâmetros da URL
 const params = new URLSearchParams(window.location.search);
 
-document.getElementById("op").innerText = params.get("OP") || "";
-document.getElementById("item").innerText = params.get("Item") || "";
-document.getElementById("prev").innerText = params.get("Prevista") || "";
-document.getElementById("prod").innerText = params.get("Produzida") || "";
-document.getElementById("status").innerText = params.get("Status") || "";
-document.getElementById("obs").innerText = params.get("Obs") || "";
-document.getElementById("local").innerText = params.get("Local") || "";
-document.getElementById("inicio").innerText = params.get("Inicio") || "";
-document.getElementById("termino").innerText = params.get("Termino") || "";
+const op = params.get("OP") || "";
+const item = params.get("Item") || "";
+const prevista = params.get("Prevista") || "";
+const produzida = params.get("Produzida") || "";
+const status = params.get("Status") || "";
+const obs = params.get("Obs") || "";
+const local = params.get("Local") || "";
+const inicio = params.get("Inicio") || "";
+const termino = params.get("Termino") || "";
+
+// Preenche os dados
+document.getElementById("op").innerText = op;
+document.getElementById("item").innerText = item;
+document.getElementById("prev").innerText = prevista;
+document.getElementById("prod").innerText = produzida;
+document.getElementById("status").innerText = status;
+document.getElementById("obs").innerText = obs;
+document.getElementById("local").innerText = local;
+document.getElementById("inicio").innerText = inicio;
+document.getElementById("termino").innerText = termino;
+
+// URL completa que o QR deve conter
+const fullURL = window.location.href;
+
+// Gera o QR Code (APARECE NO PDF)
+document.getElementById("qrImg").src =
+    "https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=" + encodeURIComponent(fullURL);
 
 // IMPRESSÃO AUTOMÁTICA
 window.onload = function () {
